# Avaliacao_Desempenho_Redes_MESH

./: diagnose_ns3.sh  meshsim_environment.sh
.github/agents/: pesquisador-mesh.agent.md
.github/skills/bmad-agent-network-researcher/: SKILL.md
MeshSim/: CMakeLists.txt
MeshSim/cmake/: Findns3.cmake
MeshSim/ns3_apps/: bulk-send-application.cc  onoff-application.cc  proxy-base.cc
MeshSim/sim/: apps_manager.cc  mesh_sim.cc  ns3_utils.cc  ns3_utils.h  progress_report.cc
_bmad-output/planning-artifacts/: MELHORIAS_COERENCIA_ARTIGO.md  README.md
_bmad-output/planning-artifacts/mesh-research/: 00_START_HERE_30MIN.md  ANALISE_MeshSim_Adequabilidade.md  CHEAT_SHEET.md  Current_error.txt  ESTADO_SIMULACAO_E_PREPARACAO_ESCRITA.md  GUIA_CONSTRUCAO_TRABALHO_ADR.md  GUIA_Literatura_Essencial.md  GUIA_REFINAMENTO_ARTIGO_LATEX.md  (+16 more)
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
experiments/: PAPER_FIGURES_METHODOLOGY.md  analyze_all.py  generate_all_configs.py  generate_paper_figures.py  results.csv  results_fixed_old.csv  results_old.csv  run_all_experiments.sh  visualize_topologies.py
experiments/pilot_100_aodv_olsr/: METADATA_20260404_140424.yaml  analyze_pilot.py  run_pilot.sh
experiments_copia/: generate_paper_figures.py  results.csv  results_expected.csv  run_all_experiments.sh
ns-3-dev/: AGENTS.md  CHANGES.md  RELEASE_NOTES.md  ns3
ns-3-dev/build-support/: macros-and-definitions.cmake
(+215 files in other folders)
